syntax = "proto3";

// Whenever a debug frame is encoded, this is sent to the remote client to be rendered over a TCP socket.
// It may also include geometries that the remote client is instructed to draw such as rectangles or circles
// (this is because it's much easier to get the remote JavaFX app to draw geometries than to do it manually on a JPEG buffer)
message DebugFrame {
    bytes defaultImage = 1; // the encoded image of just the normal view from the camera
    bytes threshImage = 2; // the encoded image containing the thresholded image generated by the OpenGL shader
}